--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,7 +20,11 @@
     "@radix-ui/react-select": "^2.0.0",
     "lucide-react": "^0.309.0",
     "recharts": "^2.10.3",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.0",
+    "bcryptjs": "^2.4.3",
+    "@types/bcryptjs": "^2.4.6"
   },
   "devDependencies": {
     "typescript": "^5.3.3",
