feat(auth): NextAuth.js v5 authentication setup
Implemented full auth for RecoverHub:
- apps/web/src/auth.ts — NextAuth v5 Credentials provider
  (email/password with bcrypt, JWT session strategy)
  pages: signIn/error → /auth/login
- apps/web/src/middleware.ts — protects /dashboard, /connections,
  /settings; redirects auth users away from /auth/*
- apps/web/src/app/api/auth/[...nextauth]/route.ts — handlers
- apps/web/src/app/api/auth/signup/route.ts — POST endpoint
  (Zod validation, duplicate email check, bcrypt 12 rounds)
- apps/web/src/app/auth/login/page.tsx — fully functional login form
  (dark theme, red #ef4343 accent, callbackUrl support, Suspense)
- apps/web/src/app/auth/signup/page.tsx — signup form
  (auto sign-in after creation, matches RecoverHub design system)
- apps/web/src/app/auth/layout.tsx — dark bg, centered card
- apps/web/src/app/layout.tsx — added SessionProvider
- apps/web/src/app/providers.tsx — SessionProvider wrapper
- apps/web/src/types/next-auth.d.ts — session augmentation (user.id)
- .env.example — AUTH_SECRET (NextAuth v5) added

Dashboard:
- /dashboard/page.tsx — added auth guard + session user greeting

Also includes Sprint 2.8 assets:
- sitemap.ts, opengraph-image.tsx

Branch: feat/db-schema

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
 # Database (PostgreSQL via Supabase)
 DATABASE_URL="postgresql://user:password@host:5432/dbname"
 
-# NextAuth
-NEXTAUTH_SECRET="<generate-with-openssl-rand-base64-32>"
-NEXTAUTH_URL="http://localhost:3000"
+# NextAuth v5
+AUTH_SECRET="<generate-with-openssl-rand-base64-32>"
+# Note: NEXTAUTH_URL not needed in v5 for most deployments
+APP_URL="http://localhost:3000"
 
 # Stripe
 STRIPE_SECRET_KEY="sk_test_..."
