--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
     "db:migrate": "turbo db:migrate"
   },
   "devDependencies": {
+    "@types/node": "^20.11.5",
     "turbo": "^1.12.0",
-    "typescript": "^5.3.3",
-    "@types/node": "^20.11.5"
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0",
     "pnpm": ">=8.0.0"
   },
-  "packageManager": "pnpm@8.15.0"
+  "packageManager": "pnpm@8.15.0",
+  "dependencies": {
+    "clsx": "^2.1.0",
+    "drizzle-orm": "^0.29.3",
+    "postgres": "^3.4.3",
+    "tailwind-merge": "^2.2.0"
+  }
 }
