--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,7 +16,9 @@
     "@recoverhub/db": "workspace:*",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
+    "bullmq": "^5.1.7",
     "clsx": "^2.1.0",
+    "ioredis": "^5.3.2",
     "lucide-react": "^0.309.0",
     "next": "^14.1.0",
     "next-auth": "^5.0.0-beta.4",
