feat(billing): Sprint 2.6 — Stripe Billing Integration
- POST /api/stripe/checkout: create checkout session for Pro/Business plans
  * Auth-protected, validates plan enum (starter=9/mo, pro=9/mo)
  * Attaches to existing Stripe customer if available
  * Returns billing portal URL if already on same active plan
  * Upserts subscriptions record on checkout creation
  * Success/cancel redirects to /settings/billing
- Webhook already handles: subscription.created/updated/deleted,
  invoice.payment_failed → past_due, invoice.payment_succeeded → active
  (tierFromPriceId maps STRIPE_PRICE_STARTER + STRIPE_PRICE_PRO env vars)

DEPENDS ON: Sprint 1.2 (DB schema ✅) + Sprint 1.6 (Stripe OAuth ✅)

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "recharts": "^2.10.3",
     "resend": "^3.0.0",
+    "stripe": "^14.14.0",
     "tailwind-merge": "^2.2.0",
     "zod": "^3.22.4"
   },
